client/styles.css
:root {
	--background: #eff1f5;
	--background-trans: #eff1f580;
	--background-invis: #eff1f500;
	--popup: #e6e9ef;
	--popup-trans: #dce0e880;
	--border-trans: #dce0e880;
	--text: #4c4f69;
	--text-trans: #4c4f6980;
	--label: #6c6f85;
	--label-alt: #dce0e8;
	--c1: #4c4f6980;
	--c2: #5c5f77C0;
	--c3: #6c6f85;

	--rosewater: #dc8a78;
	--rosewater-trans: #dc8a7830;
	--green: #40a02b;
	--green-trans: #40a02b40;

	--blue: #7287fd;
	--blue-trans: #7287fd80;
	--red: #dd7878;
	--red-trans: #dd787880;
	--grey: #acb0be;
	--grey-trans: #acb0be80;

	--highlight: var(--rosewater);
	--highlight-trans: var(--rosewater-trans);

	--header-clearance: 10rem;
	--toast-clearance: 5rem;
}

@media (prefers-color-scheme: dark) {
	:root {
		--background: #1e1e2e;
		--background-trans: #1e1e2e80;
		--background-invis: #1e1e2e00;
		--popup: #181825;
		--popup-trans: #11111b80;
		--border-trans: #11111b80;
		--text: #cdd6f4;
		--text-trans: #cdd6f480;
		--label: #a6adc8;
		--label-alt: #585b70;
		--c1: #cdd6f480;
		--c2: #bac2deC0;
		--c3: #a6adc8;

		--rosewater: #f5e0dc;
		--rosewater-trans: #f5e0dc30;
		--green: #a6e3a1;
		--green-trans: #a6e3a140;

		--blue: #89b4fa;
		--blue-trans: #89b4fa80;
		--red: #f38ba8;
		--red-trans: #f38ba880;
		--grey: #585b70;
		--grey-trans: #585b7080;
	}
}

html {
	height: 100dvh;

	&::-webkit-scrollbar {
		width: 0.5rem;
		height: 0.5rem;
	}

	&::-webkit-scrollbar-track {
		background-color: var(--popup);
	}

	&::-webkit-scrollbar-thumb {
		max-width: 0.25rem;
		background: var(--highlight);
		border-radius: 1rem;
	}
}

body {
	margin: 0;
	height: calc(100vh - var(--header-clearance) - var(--toast-clearance));
	padding-top: var(--header-clearance);
	min-height: fit-content;

	display: flex;
	justify-content: center;
	align-content: center;
	flex-direction: column;
	align-items: stretch;

	color: var(--text);
	background-color: var(--background);
	font-family: 'Verdana', sans-serif;
}

h1 {
	font-family: 'Nunito', sans-serif;
	font-weight: 700;
}

a {
	color: var(--highlight);

	&:visited {
		color: var(--highlight);
	}
}

/* * * * * * * *  */
/* INTERFACE */
/*  * * * * * * * */

.panel {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	z-index: 1;
	padding: 0 5%;

	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	align-content: center;

	background: linear-gradient(to bottom, var(--background) 0%, var(--background-trans) 60%, var(--background-invis) 100%);

	&:before {
		z-index: -1;
		content: '';
		position: absolute;
		inset: -1px;
		backdrop-filter: blur(20px);
		mask: linear-gradient(to bottom, black 80%, transparent 100%);
	}
}

#secondary-panel {
	display: none;
}

.bar {
	width: 100%;
	max-width: 50rem;

	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	align-content: center;
}

#top-bar {
	margin-bottom: 1rem;
}

#title-box {
	display: flex;
	flex-direction: row;
	width: 100%;
}

#piece-marker {
	display: flex;
	justify-content: center;
	align-items: center;
	overflow: visible;
}

#piece-marker > svg {
	height: auto;
	width: 3em;
	margin-right: 0.5rem;
}

#title-text {
	width: 100%;
	text-align: left;
}

.button-panel {
	touch-action: pan-x pan-y;

	height: 4rem;
	width: 100%;
	max-width: 20rem;

	display: flex;
	flex-direction: row;
	justify-content: end;
	align-content: center;
	align-items: center;
}

input {
	font-family: "Roboto Mono", monospace;
	font-size: 1rem;
	padding: 1rem;

	box-sizing: border-box;

	color: var(--text);
	background-color: var(--popup-trans);
	backdrop-filter: blur(10px);
	border: var(--border-trans) 2px solid;
	cursor: pointer;

	width: 100%;
	height: 100%;

	transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;

	&:hover {
		border: solid 2px var(--rosewater-trans) !important;
	}
}

button {
	svg {
		path {
			transition: stroke 0s ease-in-out;
		}

		display: block;
		min-width: 1rem;

		margin: auto auto auto auto;
		width: 1rem;
		height: 1rem;
	}

	font-family: 'Nunito', sans-serif;
	font-size: 1rem;

	color: var(--text);
	background-color: var(--popup-trans);
	backdrop-filter: blur(10px);
	border: var(--border-trans) 2px solid;
	cursor: pointer;

	width: 100%;
	height: 100%;

	transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;

	&.hidden {
		display: none;
	}

	&:hover {
		svg path {
			stroke: var(--background);
		}

		color: var(--background);
		background-color: var(--rosewater);
		transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
	}
}

button.square {
	padding: 0;
	width: auto;

	height: 100%;
	aspect-ratio: 1;
}

.button-panel .left {
	border-top-left-radius: 20px;
	border-bottom-left-radius: 20px;
}

.button-panel *:not(.right) {
	border-right: none;
	padding-right: 2px;
}

.button-panel .right {
	border-top-right-radius: 20px;
	border-bottom-right-radius: 20px;
}

input:focus, button:focus {
	outline: none;
	border: 2px solid var(--highlight) !important;

	&:not(.right) {
		padding-right: 0;
		border-right: 2px solid var(--highlight);
	}
}

#start {
	text-wrap: nowrap;

	&.enabled:hover {
		background-color: var(--highlight);
		color: var(--background);
	}
}

#leave:hover {
	background-color: var(--red);

	svg path {
		stroke: var(--background);
	}
}

#status-bar {
	justify-content: space-around;
	background-color: var(--popup-trans);
	border: var(--border-trans) 2px solid;
	box-sizing: border-box;
	box-shadow: 0 0.5rem 2rem 0.1rem #00000040;

	backdrop-filter: blur(10px);

	border-radius: 20px;
	height: 4rem;
	padding: 4px 0;
}

.status-block {
	width: 100%;
	margin: 4px;
	box-sizing: border-box;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	align-content: center;

	font-family: "Roboto Mono", monospace;
	border-radius: 14px;

	& p {
		margin: 0;
		text-align: center;

		&.status-label {
			color: var(--label);
		}
	}
}

button.status-block {
	border-color: var(--highlight-trans);
	font-size: 0.8rem;

	&:hover {
		border-color: var(--border-trans);

		& p.status-label {
			color: var(--label-alt) !important;
		}
	}
}

/* * * * * * */
/* BOARD */
/* * * * * * */

#board {
	width: 100%;
	height: 100%;

	margin: auto;
	padding: 0.5rem;

	box-sizing: border-box;
	border-style: none;
}

/*board in game mode*/
#board.grid {
	width: auto;
	max-height: 98vmin;
	aspect-ratio: 1 / 1;
}

/*board in tutorial mode*/
#board:not(.grid) {
	width: auto;
	max-height: 98vmin;
	aspect-ratio: 1 / 1;

	display: flex;
	flex-direction: column;
	align-items: center;
}

/* * * * * * * * */
/* TUTORIAL */
/* * * * * * * * */

#how-to-play {
	display: flex;
	flex-direction: column;
	align-items: center;
	max-width: 40rem;
	padding: 0 1rem 25vh;
}

#how-to-play h1 {
	margin-top: 1em;
}

#how-to-play p {
	text-align: justify;
	line-height: 1.5em;
}

#how-to-play picture {
	display: flex;
	justify-content: center;
}

#how-to-play img {
	width: 20rem;
	max-width: 90%
}

/*align pieces in cells*/
.grid svg {
	width: 100%;
	height: 100%;
}

/*prevent already won boards from looking playable*/
.grid.played {
	--highlight: none;
	--highlilght-trans: none;
}

/*highlight grids when hovering them, unless it's the base board or already played*/
.grid:not(#board, .played):hover {
	background-color: var(--highlight-trans);
}

/*highlight cells super dark on hover*/
.cell:not(.played):hover {
	background-color: var(--highlight) !important;
}

/*dim all pieces on win*/
.grid.played .grid.played svg {
	opacity: 50%;
}

/*... except in a 1 layer board, then don't dim them*/
#board.grid.played > .grid.played > svg {
	opacity: 100%;
}

/*winner overlay*/
.overlay {
	opacity: 80%;
	position: relative;
	width: 100%;
	margin-bottom: -100%;
	height: 100%;
}

/*make overlays bolder on win*/
.grid.played .grid .overlay {
	opacity: 100%;
}

/* * * * * * */
/* TOAST */
/* * * * * * */

#toast {
	opacity: 0;
	transition: opacity 1s, transform 1s;
	text-align: center;
	text-wrap: nowrap;

	background-color: var(--popup-trans);
	box-shadow: 0.5rem 0.5rem 3rem 0.1rem #00000040;
	border-radius: 20px;
	padding: 1rem;
	border: var(--border-trans) 2px solid;

	backdrop-filter: blur(10px);

	z-index: 100;
	position: fixed;
	bottom: 1rem;
	left: 50%;
	transform: translateX(-50%);
}

#toast.active {
	opacity: 1;
}

#toast:not(.active) {
	opacity: 0;
}

/* * * * * * * * * * * * * */
/* RESPONSIVENESS */
/* * * * * * * * * * * * * */

/*Move toast to the edge*/
@media (orientation: landscape) {
	#toast {
		left: 1rem;
		transform: none;
	}
}

/*Toast is to the side and height is short enough to remove the gap*/
@media (min-height: 640px) and (orientation: landscape) {
	:root {
		--toast-clearance: 0rem;
	}
}

/*Mobile, too short for stats and toast*/
@media (max-height: 640px) and (max-aspect-ratio: 9/6) {
	:root {
		--header-clearance: 6rem;
		--toast-clearance: 0rem;
	}

	#status-bar:not(.active) {
		display: none;
	}
}

/*Mobile, too thin for title text*/
@media (max-width: 352px) and (max-aspect-ratio: 9/6) {
	#title-box {
		width: fit-content;
	}

	#title-text {
		display: none;
	}

	. {
		width: 100%;
	}
}

/*Desktop*/
@media (min-aspect-ratio: 9/6) {
	:root {
		--header-clearance: 0;
	}

	body {
		height: 100%;
		flex-direction: row;
		padding: 0;
	}

	.panel {
		width: 25%;
		max-width: calc(50vw - 50vmin);
		height: 100%;

		box-sizing: border-box;

		position: sticky;
		padding: 1rem;
		top: 0;

		flex-direction: column;
		align-items: flex-start;
		justify-content: flex-start;


		&:before {
			display: none;
		}
	}

	#secondary-panel {
		display: block;
	}

	#top-bar {
		width: 100%;
		max-width: 30rem;
		padding: 0;
		margin-bottom: 1rem;

		display: flex;
		flex-direction: column;
		justify-content: space-between;
		align-items: center;
	}

	#status-bar {
		width: 100%;
		min-width: fit-content;
		max-width: 30rem;
		height: fit-content;
		padding: 0 4px;
		flex-direction: column;
	}

	button.status-block p {
		font-size: 1rem;
	}

	#start {
		width: 100%;
	}

	#board:not(.grid) {;
		aspect-ratio: revert;
		min-height: fit-content;
	}
}

/*Desktop, too thin for the right panel*/
@media (min-aspect-ratio: 9/6) and (max-width: 1120px) {
	body {
		flex-direction: row;
		justify-content: space-between;
	}

	.panel {
		width: 100%;
		max-width: 30vw;
	}

	#secondary-panel {
		display: none;
	}

	#board{
		width: auto;
		aspect-ratio: 1;
	}
}

.grid {
	width: 33.3%;
	height: 33.3%;
	padding: 1.5%;
	box-sizing: border-box;

	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	align-content: center;

	border-style: solid;

	.top {
		border-top: none;
	}

	.bottom {
		border-bottom: none;
	}

	.left {
		border-left: none;
	}

	.right {
		border-right: none;
	}

	transition: background-color 0.25s ease-out;

	.active:not(.played) {
		background-color: var(--green-trans) !important;
		--highlight: var(--green);
		--highlight-trans: var(--green-trans);
	}
}

